tests/errors/semantics/subscripted_expr_not_array.c
// Subscripted expression is not an array
void main()
{
	int not_arr = 10;
	not_arr[1];
}
